--- a/TestXMace.ipynb
+++ b/TestXMace.ipynb
@@ -9,8 +9,8 @@
     "Test results: \n",
     "    1) environment variables not added (see https://pypi.org/project/ase/ , section Installation) - failed\n",
     "    2) run command 'ace test' in the terminal (see https://pypi.org/project/ase/ , section Testing) - failed due to item 1) above\n",
-    "    3) run command 'ace test' in the notebook cell - failed, see below\n",
-    "    4) run example script (see https://pypi.org/project/ase/ , section Example) - failed, see below\n",
+    "    3) run command 'ace test' in the notebook cell (see below) - failed, \n",
+    "    4) run example script (see https://pypi.org/project/ase/ , section Example) see below - failed\n",
     "\n",
     "Conclusion: ACE module is not properly installed"
    ]
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2370,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: LAMMPS seems to be not installed at all"
+    "Conclusion: LAMMPS executable not found. LAMMPS seems to be not installed at all. See also item 4 about MATSCIPY installation (above) - it is related to the absence of LAMMPS DLLs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Test Quantum Espresso (see https://icme.hpc.msstate.edu/mediawiki/index.php/Code:_Quantum_Espresso.html )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze | grep testcode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "testcode is not installed as requested in the task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: pw.x\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pw.x <qe_example.in> scf.out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------\n",
+      "mpirun was unable to find the specified executable file, and therefore\n",
+      "did not launch the job.  This error was first reported for process\n",
+      "rank 0; it may have occurred for other processes as well.\n",
+      "\n",
+      "NOTE: A common cause for this error is misspelling a mpirun command\n",
+      "      line parameter option (remember that mpirun interprets the first\n",
+      "      unrecognized command line token as the executable).\n",
+      "\n",
+      "Node:       production-env-5ae8671c991a4bd9901cc96afbde63de\n",
+      "Executable: pw.x\n",
+      "--------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mpirun -np 4 pw.x <qe_example.in> qe_example.out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pw.x:\n"
+     ]
+    }
+   ],
+   "source": [
+    "!whereis pw.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qe:\n"
+     ]
+    }
+   ],
+   "source": [
+    "!whereis qe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: Quantum Espresso executable not found. Quantum Espresso seems to be not installed at all. "
    ]
   }
  ],
