--- a/TestMACE.ipynb
+++ b/TestMACE.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Sample Notebook"
+    "import numpy"
    ]
   },
   {
@@ -225,6 +227,8 @@
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "start = time.time()\n",
     "!python3 ./scripts/run_train_.py \\\n",
     "  --log_dir=/home/coder/project/logs \\\n",
@@ -277,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
